RESOLVED FIXED253265
Regression(256456@main) Express checkout is broken on victoriassecret.com
https://bugs.webkit.org/show_bug.cgi?id=253265
Summary Regression(256456@main) Express checkout is broken on victoriassecret.com
Chris Dumez
Reported 2023-03-02 13:58:35 PST
Express checkout is broken on victoriasecret.com after enabling Fetch Metadata in 256456@main.
Attachments
Chris Dumez
Comment 1 2023-03-02 13:59:12 PST
Chris Dumez
Comment 2 2023-03-02 14:03:24 PST
Chris Dumez
Comment 3 2023-03-02 15:22:13 PST
EWS
Comment 4 2023-03-03 07:39:06 PST
Committed 261141@main (eb5cfc861737): <https://commits.webkit.org/261141@main> Reviewed commits have been landed. Closing PR #10964 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.