Cherry-pick eb5cfc861737. rdar://problem/104818312

Regression(256456@main) Express checkout is broken on victoriassecret.com
    https://bugs.webkit.org/show_bug.cgi?id=253265
    rdar://104818312

    Reviewed by Brent Fulgham and Youenn Fablet.

    Temporarily disable the Fetch Metadata feature on victoriassecret.com since it
    breaks express checkout and while we're investigate the root cause.

    * Source/WebCore/Modules/websockets/ThreadableWebSocketChannel.cpp:
    (WebCore::ThreadableWebSocketChannel::webSocketConnectRequest):
    * Source/WebCore/loader/cache/CachedResourceLoader.cpp:
    (WebCore::CachedResourceLoader::updateRequestAfterRedirection):
    (WebCore::CachedResourceLoader::updateHTTPRequestHeaders):
    * Source/WebCore/page/Quirks.cpp:
    (WebCore::Quirks::shouldDisableFetchMetadata const):
    * Source/WebCore/page/Quirks.h:

    Canonical link: https://commits.webkit.org/261141@main